--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <title>Rotable</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta property="og:title" content="ROTABLE&#174;" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content=" " />
+    <meta property="og:description" content="Get any table in the most crowded restaurants." />
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/Vector.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/Vector.png">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/footers/">
@@ -132,7 +142,7 @@
               <img class="image-2" src="img/image-128.png" />
               <img class="image-3" src="img/image-126.png" />
             </div>
-            <div class="text-wrapper-2">Contact Us</div>
+            <div><a class="text-wrapper-2" href="./Contact/contact.html">Contact Us</a></div>
               <div class="text-wrapper-3">Add Your Restaurant</div>
             
               <div class="frame-8">
