--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
           <div class="overlap-11">
             <img class="rotable-logo-2" src="img/rotable-logo-2.svg" />
             <img class="layer" src="img/layer-1.svg" />
+            <img class="layer-mobile" src="./img/Layer_1.png"/>
       
             <script>
               document.addEventListener("DOMContentLoaded", function () {
@@ -356,7 +357,10 @@
           </div>
         </div>
       </section>
-      
+      <div class="overlap-container">
+        <img class="layer-mobile" src="./img/Layer_1.png" alt="Layer 1" />
+        <img class="layer-mobile2" src="./img/Rotable Logo.png" alt="Rotable Logo" />
+    </div>
         <section>
           <div class="copyright-text">
             <div class="parent-group">
