--- a/Contact/download now.html
+++ b/Contact/download now.html
@@ -82,10 +82,10 @@
               
               <div class="image-container">
                 <a href="#">
-                  <img class="download-on-the-app" src="../img/download-on-the-app-store-1.svg" alt="Download on the App Store" />
+                  <img class="download-on-the-app" src="../img/group.svg" alt="Download on the App Store" />
                 </a>
                 <a href="#">
-                  <img class="en-badge-web-generic" src="../img/en-badge-web-generic-2.png" alt="Your Alt Text" />
+                  <img class="en-badge-web-generic" src="../img/en_badge_web_generic 2.svg" alt="Your Alt Text" />
                 </a>
               </div>
               
@@ -103,7 +103,7 @@
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                            <li class="ftco-animate"><a href="https://www.instagram.com/tipsy.turk/?hl=en"><span class="icon-instagram"></span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -125,19 +125,19 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">Instagram</h2>
                         <div class="thumb d-sm-flex">
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-1.jpg);">
+                            <a href="https://www.instagram.com/tipsy.turk/?hl=en" class="thumb-menu img" style="background-image: url(images/insta-1.jpg);">
 	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-2.jpg);">
+                            <a href="https://www.instagram.com/tipsy.turk/?hl=en" class="thumb-menu img" style="background-image: url(images/insta-2.jpg);">
 	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-3.jpg);">
+                            <a href="https://www.instagram.com/tipsy.turk/?hl=en" class="thumb-menu img" style="background-image: url(images/insta-3.jpg);">
 	            	</a>
                         </div>
                         <div class="thumb d-flex">
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-4.jpg);">
+                            <a href="https://www.instagram.com/tipsy.turk/?hl=en" class="thumb-menu img" style="background-image: url(images/insta-4.jpg);">
 	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-5.jpg);">
+                            <a href="https://www.instagram.com/tipsy.turk/?hl=en" class="thumb-menu img" style="background-image: url(images/insta-5.jpg);">
 	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-6.jpg);">
+                            <a href="https://www.instagram.com/tipsy.turk/?hl=en" class="thumb-menu img" style="background-image: url(images/insta-6.jpg);">
 	            	</a>
                         </div>
                     </div>
