minor bug fixes

--- a/index.html
+++ b/index.html
@@ -439,8 +439,9 @@
               </div>
             </div>
             <div>
-              <a href="https://www.instagram.com/the_tipsy_turk/?hl=en" target="_blank" class="image" style="background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/199011/happy.svg')"></a>
-              <p>@Tipsy Turk</p>
+              <a href="https://www.instagram.com/the_tipsy_turk/?hl=en" target="_blank" class="image" style="background-image: url('./img/Rotable\ Logo\ white.png'); background-size: cover; background-position: center; width: 55px; height: 50px;"></a>
+
+              <p>@Rotable</p>
             </div>
           </div>
         </div>
