--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
                 <div class="col-md-9 ftco-animate text-center mb-4">
-                    <h1 class="mb-2 bread" style="font-size: 150px;">Contact</h1>
+                    <h1 class="mb-2 bread">Contact</h1>
 
                 </div>
             </div>
