--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content=" " />
     <meta property="og:description" content="Get any table in the most crowded restaurants." />
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/Vector.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/Vector.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/Vector.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/Vector.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/footers/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
