privacy policy update

--- a/index.html
+++ b/index.html
@@ -438,9 +438,12 @@
               </div>
             </div>
             <div>
-              <a href="https://www.instagram.com/the_tipsy_turk/?hl=en" target="_blank" class="image" style="background-image: url('./img/Rotable\ Logo\ white.png'); background-size: cover; background-position: center; width: 55px; height: 50px;"></a>
+              <p class="footer-privacy-policy">
+                <a href="./privacy.html">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://www.example.com/terms-conditions">Terms & Condition</a>
 
-              <p>@Rotable</p>
+              </p>
+              
             </div>
           </div>
         </div>
