--- a/privacy.html
+++ b/privacy.html
@@ -155,11 +155,11 @@
     <meta data-react-helmet="true" property="og:url" content="https://www.rotable.in/" />
     <meta data-react-helmet="true" property="og:locale" content="en_US" />
     <meta data-react-helmet="true" property="og:type" content="website" />
-    <meta data-react-helmet="true" name="description" content="You can find information about us and how we collect, use and store your personal data in each section of this privacy notice. Learn online and earn valuable credentials from top universities like Yale, Michigan, Stanford, and leading companies ..."
+    <meta data-react-helmet="true" name="description" content=""
     />
     <meta data-react-helmet="true" name="image" content="./Contact/images/insta-2.jpg" />
     <meta data-react-helmet="true" property="og:title" content="Privacy Policy | Rotable Ventures" />
-    <meta data-react-helmet="true" property="og:description" content="You can find information about us and how we collect, use and store your personal data in each section of this privacy notice. Learn online and earn valuable credentials from top universities like Yale, Michigan, Stanford, and leading companies ..."
+    <meta data-react-helmet="true" property="og:description" content=""
     />
     <meta data-react-helmet="true" property="og:image" content="./Contact/images/insta-2.jpg" />
     <meta data-react-helmet="true" property="twitter:title" content="Privacy Policy | Rotable Ventures" />
