--- a/privacy.html
+++ b/privacy.html
@@ -163,7 +163,7 @@
     />
     <meta data-react-helmet="true" property="og:image" content="./Contact/images/insta-2.jpg" />
     <meta data-react-helmet="true" property="twitter:title" content="Privacy Policy | Rotable Ventures" />
-    <meta data-react-helmet="true" property="twitter:description" content="You can find information about us and how we collect, ..." />
+    <meta data-react-helmet="true" property="twitter:description" content="" />
     <meta data-react-helmet="true" property="twitter:image:src" content="./Contact/images/insta-2.jpg" />
     <meta data-react-helmet="true" property="twitter:image" content="./Contact/images/insta-2.jpg" />
     <meta data-react-helmet="true" property="twitter:card" content="summary" />
