--- a/privacy.html
+++ b/privacy.html
@@ -1927,7 +1927,7 @@
 </style>
 
 <header class="navbar">
-  <a href="/" class="logo">
+  <a href="./index.html" class="logo">
     <img src="./img/Frame 1.png" alt="Your Company Logo">
   </a>
   <a href="./Contact/download now.html" class="button-28" role="button">Download</a>
