--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             <div>
               <p class="footer-privacy-policy">
                 <a href="./privacy.html">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="https://www.example.com/terms-conditions">Terms & Condition</a>
+                <a href="./privacy.html">Terms & Condition</a>
 
               </p>
               
