--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
             </div>
             <div>
               <p class="footer-privacy-policy">
-                <a href="./privacy.html">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="./privacy.html">Terms & Condition</a>
+                <a href="./Policy.html">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="./Policy.html">Terms & Condition</a>
 
               </p>
               
