--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             </div>
             <div>
               <p class="footer-privacy-policy">
-                <a href="./Policy.html">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="./privacy.html">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="./Policy.html">Terms & Condition</a>
 
               </p>
