--- a/Verify.html
+++ b/Verify.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta property="og:description" content="Request Rotable to Delete your Data, Verify with your Phone number" />
-    <title>Mobile Phone Verification</title>
+    <title>Phone Number Verification</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
