--- a/Policy.html
+++ b/Policy.html
@@ -1930,7 +1930,7 @@
   <a href="./index.html" class="logo">
     <img src="./img/Frame 1.png" alt="Your Company Logo">
   </a>
-  <a href="./Contact/download now.html" class="button-28" role="button">Download</a>
+  <a href="./Contact/download.html" class="button-28" role="button">Download</a>
 </header>
 <div style="display:flex;align-items:center">
   <span class="iconContainer"></span>
