--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -16,217 +16,137 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-
-    <link rel="stylesheet" href="css/aos.css">
-
-    <link rel="stylesheet" href="css/ionicons.min.css">
-
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
-
-
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
-    <div class="py-1 bg-black top">
-        <div class="container">
-            <div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
-                <div class="col-lg-12 d-block">
-                    <div class="row d-flex">
-                        <div class="col-md pr-4 d-flex topper align-items-center">
-                            <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-                            <span class="text">8888883910</span>
-                        </div>
-                        <div class="col-md pr-4 d-flex topper align-items-center">
-                            <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-                            <span class="text">rutwikjoshi@gmail.com</span>
-                        </div>
-                        <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right justify-content-end">
-                            <p class="mb-0 register-link"><span>Open hours:</span> <span>Monday - Sunday</span> <span>10:00AM - 11:00PM</span></p>
-                        </div>
+    <header class="site-header">
+        <div class="header-top">
+            <div class="container">
+                <div class="header-top__info">
+                    <div class="header-top__contact">
+                        <span><i class="fas fa-phone-alt"></i> 8888883910</span>
+                        <span class="ml-4"><i class="fas fa-envelope"></i> rutwikjoshi@gmail.com</span>
+                    </div>
+                    <div class="header-top__hours">
+                        <i class="fas fa-clock"></i> Open: Mon-Sun 10:00AM - 11:00PM
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-        <div class="container">
-            <a class="navbar-brand" href="../index.html">Rotable</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
+        <nav class="main-nav container">
+            <a href="../index.html" class="nav-brand">Rotable</a>
+            <ul class="nav-links">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="#contact-section">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <div class="collapse navbar-collapse" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <!-- <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-                    <li class="nav-item"><a href="blog.html" class="nav-link">Stories</a></li> -->
-                    <!-- <li class="nav-item active"><a href="../index.html" class="nav-link">Home</a></li> -->
-                    <li class="nav-item cta"><a href="../index.html" class="nav-link">Home</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- END nav -->
-
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row no-gutters slider-text align-items-end justify-content-center">
-                <div class="col-md-9 ftco-animate text-center mb-4">
-                    <h1 class="mb-2 bread">Contact</h1>
-
-                </div>
-            </div>
+    <section class="contact-hero">
+        <div class="contact-hero__content animate-fade-up">
+            <h1 class="contact-hero__title">Let's Get Connected</h1>
+            <p class="contact-hero__subtitle">
+                Ready to elevate your dining experience? We're here to help you get the best tables at your favorite restaurants.
+            </p>
         </div>
     </section>
-
-    <section class="ftco-section ftco-no-pt ftco-no-pb contact-section">
+    <section id="contact-section" class="contact-section">
         <div class="container">
-            <div class="row d-flex align-items-stretch no-gutters">
-                <div class="col-md-6 pt-5 px-2 pb-2 p-md-5 order-md-last">
-                    <h2 class="h4 mb-2 mb-md-5 font-weight-bold">Contact Us</h2>
-                    <form action="#">
+            <div class="contact-grid">
+                <div class="contact-form-wrapper animate-fade-up">
+                    <form id="contactForm" class="contact-form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Name">
+                            <input type="text" class="contact-form__input" placeholder="Full Name" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Email">
+                            <input type="email" class="contact-form__input" placeholder="Email Address" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Subject">
+                            <input type="tel" class="contact-form__input" placeholder="Phone Number">
                         </div>
                         <div class="form-group">
-                            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                            <textarea class="contact-form__input" rows="4" placeholder="How can we help you?" required></textarea>
                         </div>
-                        <div class="form-group">
-                            <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-                        </div>
+                        <button type="submit" class="contact-form__button">
+                            Send Message
+                            <i class="fas fa-arrow-right"></i>
+                        </button>
                     </form>
                 </div>
-                <div class="col-md-6 d-flex align-items-stretch">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4489.123907692459!2d79.07721178196554!3d21.161615044241678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c141e643b58b%3A0xf5f4fdca8a4454b4!2sTipsy%20Turk%20-%20Rooftop%20%26%20Bar!5e0!3m2!1sen!2sin!4v1704610390153!5m2!1sen!2sin"width="600" height="550" style="border:0;margin-top: 50px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="ftco-section contact-section">
-        <div class="container">
-            <div class="row d-flex contact-info">
-                <div class="col-md-12 mb-4">
-                    <h2 class="h4 font-weight-bold">Contact Information</h2>
-                </div>
-                <div class="w-100"></div>
-                <div class="col-md-3 d-flex">
-                    <div class="dbox">
-                        <p><span style="color:#00ff0a;">Address:</span> Tipsy Turk, 2nd floor Buty building, mount road Sadar. 440001</p>
-                    </div>
-                </div>
-                <div class="col-md-3 d-flex">
-                    <div class="dbox">
-                        <p><span>Phone:</span> <a href="tel://8888883910">8888883910</a></p>
-                    </div>
-                </div>
-                <div class="col-md-3 d-flex">
-                    <div class="dbox">
-                        <p><span>Email:</span> <a href="rutwikjoshi@gmail.com">rutwikjoshi@gmail.com</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+                <div class="contact-info-wrapper animate-fade-up">
+                    <div class="contact-info">
+                        <div class="contact-info__item">
+                            <div class="contact-info__icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div class="contact-info__content">
+                                <h3>Visit Us</h3>
+                                <p>Tipsy Turk, 2nd floor Buty building, mount road Sadar. 440001</p>
+                            </div>
+                        </div>
+                        <div class="contact-info__item">
+                            <div class="contact-info__icon">
+                                <i class="fas fa-phone-alt"></i>
+                            </div>
+                            <div class="contact-info__content">
+                                <h3>Call Us</h3>
+                                <p><a href="tel:8888883910">+91 888 888 3910</a></p>
+                            </div>
+                        </div>
+                        <div class="contact-info__item">
+                            <div class="contact-info__icon">
+                                <i class="fas fa-envelope"></i>
+                            </div>
+                            <div class="contact-info__content">
+                                <h3>Email Us</h3>
+                                <p><a href="mailto:rutwikjoshi@gmail.com">rutwikjoshi@gmail.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="map-container animate-fade-up">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4489.123907692459!2d79.07721178196554!3d21.161615044241678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c141e643b58b%3A0xf5f4fdca8a4454b4!2sTipsy%20Turk%20-%20Rooftop%20%26%20Bar!5e0!3m2!1sen!2sin!4v1704610390153!5m2!1sen!2sin" 
+            width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+    </div>
+
+    <footer class="site-footer">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-6 col-lg-3">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Rotable</h2>
-                        <p>Get any table in the most crowded restaurants.</p>
-                        <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Open Hours</h2>
-                        <ul class="list-unstyled open-hours">
-                            <li class="d-flex"><span>Monday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Tuesday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Wednesday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Thursday</span><span>9:00 - 24:00</span></li>
-                            <li class="d-flex"><span>Friday</span><span>9:00 - 02:00</span></li>
-                            <li class="d-flex"><span>Saturday</span><span>9:00 - 02:00</span></li>
-                            <li class="d-flex"><span>Sunday</span><span> 9:00 - 02:00</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Instagram</h2>
-                        <div class="thumb d-sm-flex">
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-1.jpg);">
-	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-2.jpg);">
-	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-3.jpg);">
-	            	</a>
-                        </div>
-                        <div class="thumb d-flex">
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-4.jpg);">
-	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-5.jpg);">
-	            	</a>
-                            <a href="#" class="thumb-menu img" style="background-image: url(images/insta-6.jpg);">
-	            	</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-                </div>
-            </div>
+            <p class="text-center">&copy; 2024 Rotable. All rights reserved.</p>
         </div>
     </footer>
 
+    <script>
+        // Header scroll effect
+        window.addEventListener('scroll', function() {
+            const header = document.querySelector('.site-header');
+            if (window.scrollY > 100) {
+                header.classList.add('scrolled');
+            } else {
+                header.classList.remove('scrolled');
+            }
+        });
+    </script>
 
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/contact.js"></script>
+
+    <script>
+        AOS.init({
+            duration: 800,
+            easing: 'ease',
+            once: true
+        });
+    </script>
 
 </body>
 
