--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="Get any table in the most crowded restaurants." />
     <link rel="icon" type="image/png" sizes="32x32" href="./img/Vector.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/Vector.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/footers/">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -76,7 +77,7 @@
   
                   <div class="collapse navbar-collapse" id="navbarNav">
                       <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link" style="margin-right: 50px; font-family: 'Open Sauce One-Medium', Helvetica; font-weight: 700; font-size: 16px; letter-spacing: 0; line-height: 24px; white-space: nowrap; opacity: 1; transition: opacity 0.5s ease 4s, color 0.5s ease; top: 16px; left: 526px; color: var(--white-100);" onmouseover="this.style.opacity=1; this.style.color='var(--green-1)';" onmouseout="this.style.opacity=1; this.style.color='var(--white-100)';" href="./Contact/download now.html">Add Your Restaurant</a>
+                        <a class="nav-item nav-link" style="margin-right: 50px; font-family: 'Open Sauce One-Medium', Helvetica; font-weight: 700; font-size: 16px; letter-spacing: 0; line-height: 24px; white-space: nowrap; opacity: 1; transition: opacity 0.5s ease 4s, color 0.5s ease; top: 16px; left: 526px; color: var(--white-100);" onmouseover="this.style.opacity=1; this.style.color='var(--green-1)';" onmouseout="this.style.opacity=1; this.style.color='var(--white-100)';" href="./Contact/download.html">Add Your Restaurant</a>
 
                         <a class="nav-item nav-link" style="margin-right: 600px; font-family: 'Open Sauce One-Medium', Helvetica; font-weight: 700; font-size: 16px; letter-spacing: 0; line-height: 24px; white-space: nowrap; opacity: 1; transition: opacity 0.5s ease 4s, color 0.5s ease; top: 16px; left: 714px; color: var(--green-1);" onmouseover="this.style.opacity=1; this.style.color='var(--white-100)';" onmouseout="this.style.opacity=1; this.style.color='var(--green-1)';" href="./Contact/contact.html">Contact Us</a>
                         
@@ -254,57 +255,62 @@
       <section class="rectangle-parent">
         <div class="frame-item"></div>
         <div class="ellipse-parent">
-          <div class="frame-inner"></div>
-          <h3 class="feature-name">Feature Name</h3>
+          <div class="frame-inner">
+            <i class="fas fa-qrcode feature-icon"></i>
+          </div>
+          <h3 class="feature-name">Smart QR Check-in</h3>
           <div class="lorem-ipsum-dolor">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            Seamlessly check in to restaurants using our smart QR system. Skip the waiting line and get instant confirmation of your table reservation with a simple scan.
           </div>
         </div>
+
         <div class="ellipse-group">
-          <div class="ellipse-div"></div>
-          <h3 class="feature-name1">Feature Name</h3>
+          <div class="ellipse-div">
+            <i class="fas fa-clock feature-icon"></i>
+          </div>
+          <h3 class="feature-name1">Real-time Availability</h3>
           <div class="lorem-ipsum-dolor1">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            Get live updates on table availability at your favorite restaurants. Our real-time system ensures you always have accurate information about waiting times and open tables.
           </div>
         </div>
+
         <div class="ellipse-container">
-          <div class="frame-child1"></div>
-          <h3 class="feature-name2">Feature Name</h3>
+          <div class="frame-child1">
+            <i class="fas fa-star feature-icon"></i>
+          </div>
+          <h3 class="feature-name2">Priority Booking</h3>
           <div class="lorem-ipsum-dolor2">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            Enjoy exclusive access to premium table reservations. Get priority booking options at popular restaurants during peak hours and special occasions.
           </div>
         </div>
+
         <div class="ellipse-parent1">
-          <div class="frame-child2"></div>
-          <h3 class="feature-name3">Feature Name</h3>
+          <div class="frame-child2">
+            <i class="fas fa-bell feature-icon"></i>
+          </div>
+          <h3 class="feature-name3">Smart Notifications</h3>
           <div class="lorem-ipsum-dolor3">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            Receive timely alerts about your table status, special offers, and upcoming reservations. Never miss an update about your dining plans with our intelligent notification system.
           </div>
         </div>
+
         <div class="ellipse-parent2">
-          <div class="frame-child3"></div>
-          <h3 class="feature-name4">Feature Name</h3>
+          <div class="frame-child3">
+            <i class="fas fa-utensils feature-icon"></i>
+          </div>
+          <h3 class="feature-name4">Restaurant Discovery</h3>
           <div class="lorem-ipsum-dolor4">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            Explore new dining experiences with our curated restaurant recommendations. Find perfect dining spots based on your preferences, location, and past dining history.
           </div>
         </div>
+
         <div class="ellipse-parent2">
-          <div class="frame-child4"></div>
-          <h3 class="feature-name5">Feature Name</h3>
+          <div class="frame-child4">
+            <i class="fas fa-user-friends feature-icon"></i>
+          </div>
+          <h3 class="feature-name5">Social Dining</h3>
           <div class="lorem-ipsum-dolor5">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            Connect with friends and share your dining experiences. Coordinate group bookings effortlessly and discover restaurants through trusted recommendations from your network.
           </div>
         </div>
       </section>
@@ -364,7 +370,7 @@
           <div class="copyright-text">
             <div class="parent-group">
               <div class="buttons">
-                <button class="blob-btn" onclick="window.location.href='./Contact/download now.html';">
+                <button class="blob-btn" onclick="window.location.href='./Contact/download.html';">
                   Get Rotable Now
                   <span class="blob-btn__inner">
                     <span class="blob-btn__blobs">
@@ -420,9 +426,6 @@
        <div class="main">
         <div class="footer">
           <div class="bubbles">
-            <!-- Loop for creating bubbles -->
-            <!-- Note: In Pug, the loop starts with a hyphen (-) -->
-            <!-- In HTML, we use a standard for loop within a script tag -->
             <script>
               for (var i = 0; i < 128; i++) {
                 document.write(`
@@ -432,18 +435,11 @@
             </script>
           </div>
           <div class="content">
-            <div>
-              <div>
-                <b>©2023 Rotable Technologies Pvt. Ltd.&nbsp;&nbsp;|&nbsp;&nbsp;All Rights Reserved.</b>
-              </div>
+            <div class="copyright">
+              <b>©2023 Rotable Technologies Pvt. Ltd. | All Rights Reserved.</b>
             </div>
-            <div>
-              <p class="footer-privacy-policy">
-                <!-- <a href="./privacy.html">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-                <a href="./Policy.html">Privacy Policy</a>
-
-              </p>
-              
+            <div class="footer-links">
+              <a href="./Policy.html" class="footer-privacy-policy">Privacy Policy</a>
             </div>
           </div>
         </div>
