--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -2,13 +2,23 @@
 <html lang="en">
 
 <head>
-    <title>Rotable</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta property="og:title" content="ROTABLE&#174;" />
+    <title>Contact Rotable - Get Support & Restaurant Partnership</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Contact Rotable for restaurant partnerships, support, or general inquiries. Join our network of premium restaurants and transform your dining business." />
+    <meta name="keywords" content="Rotable contact, restaurant partnership, dining support, table booking support, restaurant collaboration, Rotable business" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Contact Rotable - Restaurant Partnerships & Support" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://www.rotable.com/contact" />
+    <meta property="og:description" content="Partner with Rotable or get support. Transform your restaurant business with smart table management." />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.rotable.com/contact" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta property="og:image" content=" " />
-    <meta property="og:description" content="Get any table in the most crowded restaurants." />
     <link rel="icon" type="image/png" sizes="32x32" href="../img/Vector.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/Vector.png">
     <meta charset="utf-8">
