--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Rotable</title>
+    <title>Rotable - Get Premium Restaurant Tables Instantly</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta property="og:title" content="ROTABLE&#174;" />
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Rotable - The smart restaurant table booking app. Get instant access to premium tables at the most popular restaurants. Skip waiting lines with QR check-in and real-time availability." />
+    <meta name="keywords" content="Rotable, restaurant booking, table reservation, dining app, smart dining, restaurant tables, premium dining, QR check-in, restaurant wait list, fine dining, restaurant discovery" />
+    <meta name="author" content="Rotable Technologies" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Rotable - Premium Restaurant Table Booking" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="Get any table in the most crowded restaurants." />
+    <meta property="og:url" content="https://www.rotable.com/" />
+    <meta property="og:image" content="https://www.rotable.com/img/rotable-preview.jpg" />
+    <meta property="og:description" content="Skip the wait. Get premium tables at top restaurants instantly with Rotable." />
+    <meta property="og:site_name" content="Rotable" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@RotableApp" />
+    <meta name="twitter:title" content="Rotable - Premium Restaurant Table Booking" />
+    <meta name="twitter:description" content="Skip the wait. Get premium tables at top restaurants instantly with Rotable." />
+    <meta name="twitter:image" content="https://www.rotable.com/img/rotable-preview.jpg" />
+
+    <!-- Mobile Meta Tags -->
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="application-name" content="Rotable" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.rotable.com/" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/Vector.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/Vector.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
