--- a/Contact/download.html
+++ b/Contact/download.html
@@ -2,8 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Download Rotable App - Smart Restaurant Table Booking</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Download the Rotable app for instant access to premium restaurant tables. Available for iOS and Android. Skip the wait and book your perfect dining experience." />
+    <meta name="keywords" content="Rotable app, restaurant booking app, table reservation app, dining app download, restaurant wait list app, smart dining application" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Download Rotable - Premium Restaurant Booking App" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.rotable.com/download" />
+    <meta property="og:description" content="Get the Rotable app now and transform your dining experience. Available on iOS and Android." />
+
+    <!-- App Store Meta Tags -->
+    <meta name="apple-itunes-app" content="app-id=yourAppID">
+    <meta name="google-play-app" content="app-id=your.package.name">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.rotable.com/download" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Rotable App</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./download.css">
     <link rel="icon" type="image/x-icon" href="../img/Vector.png">
